<resources>
    <string name="app_name">DnD Character Sheet</string>
    <string name="action_settings">Settings</string>
    <string name="createButton">Create Character</string>
    <string name="viewButton">View Character Sheets</string>
    <string name="title_activity_view_character">ViewCharacterActivity</string>
    <string name="GenAttr">Select General Attributes</string>
    <string name="hintName">Name</string>
    <string-array name="race_arrays">
        <item>Select Race</item>
        <item>Aarakocra</item>
        <item>Aasimar</item>
        <item>Bugbear</item>
        <item>Dragonborn</item>
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Feral Tiefling</item>
        <item>Firbolg</item>
        <item>Genasi</item>
        <item>Gnome</item>
        <item>Goblin</item>
        <item>Goliath</item>
        <item>Half-Elf</item>
        <item>Halfling</item>
        <item>Half-Orc</item>
        <item>Hobgoblin</item>
        <item>Human</item>
        <item>Kenku</item>
        <item>Kobold</item>
        <item>Lizardfolk</item>
        <item>Orc</item>
        <item>Tabaxi</item>
        <item>Tiefling</item>
        <item>Tortle</item>
        <item>Triton</item>
        <item>Yuan-ti Pureblood</item>
    </string-array>
    <string-array name="class_arrays">
        <item>Select Class</item>
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
        <item>Blood Hunter</item>
    </string-array>
    <string-array name="background_arrays">
        <item>Select Background</item>
        <item>Acolyte</item>
        <item>Anthropologist</item>
        <item>Archaeologist</item>
        <item>Charlatan</item>
        <item>City Watch/Investigator</item>
        <item>Clan Crafter</item>
        <item>Cloistered Scholar</item>
        <item>Courtier</item>
        <item>Criminal/Spy</item>
        <item>Entertainer</item>
        <item>Faction Agent</item>
        <item>Far Traveler</item>
        <item>Folk Hero</item>
        <item>Gladiator</item>
        <item>Guild Artisan/Guild Merchant</item>
        <item>Haunted One</item>
        <item>Hermit</item>
        <item>Inheritor</item>
        <item>Knight</item>
        <item>Knight of the Order</item>
        <item>Mercenary Veteran</item>
        <item>Noble</item>
        <item>Outlander</item>
        <item>Pirate</item>
        <item>Sage</item>
        <item>Sailor</item>
        <item>Soldier</item>
        <item>Urban Bounty Hunter</item>
        <item>Urchin</item>
        <item>Uthgardt Tribe Member</item>
        <item>Waterdhavian Noble</item>
    </string-array>
    <string-array name="alignment_arrays">
        <item>Select Alignment</item>
        <item>Lawful Good</item>
        <item>Neutral Good</item>
        <item>Chaotic Good</item>
        <item>Lawful Neutral</item>
        <item>Neutral</item>
        <item>Chaotic Neutral</item>
        <item>Lawful Evil</item>
        <item>Neutral Evil</item>
        <item>Chaotic Evil</item>
    </string-array>
    <string-array name="language_arrays">
        <item>Select Language</item>
        <item>Abyssal</item>
        <item>Aquan</item>
        <item>Auran</item>
        <item>Celestial</item>
        <item>Common</item>
        <item>Deep Speech</item>
        <item>Draconic</item>
        <item>Druidic</item>
        <item>Dwarvish</item>
        <item>Elvish</item>
        <item>Giant</item>
        <item>Gnomish</item>
        <item>Goblin</item>
        <item>Gnoll</item>
        <item>Halfling</item>
        <item>Ignan</item>
        <item>Infernal</item>
        <item>Orc</item>
        <item>Primordial</item>
        <item>Sylvan</item>
        <item>Terran</item>
        <item>Undercommon</item>
    </string-array>
    <string-array name="armor_arrays">
        <item>Select Armor</item>
        <item>Padded</item>
        <item>Leather</item>
        <item>Studded Leather</item>
        <item>Hide</item>
        <item>Chain Shirt</item>
        <item>Scale Mail</item>
        <item>Breastplate</item>
        <item>Half Plate</item>
        <item>Ring Mail</item>
        <item>Chain Mail</item>
        <item>Splint</item>
        <item>Plate</item>
    </string-array>
    <string-array name="shield_arrays">
        <item>Select Shield</item>
        <item>None</item>
        <item>Wood</item>
        <item>Metal</item>
    </string-array>
    <string-array name="weapons_arrays">
        <item>Select Weapon</item>
        <item>Club</item>
        <item>Dagger</item>
        <item>Greatclub</item>
        <item>Handaxe</item>
        <item>Javelin</item>
        <item>Light Hammer</item>
        <item>Mace</item>
        <item>Quarterstaff</item>
        <item>Sickle</item>
        <item>Spear</item>
        <item>Crossbow, light</item>
        <item>Dart</item>
        <item>Shortbow</item>
        <item>Sling</item>
        <item>Battleaxe</item>
        <item>Flail</item>
        <item>Glaive</item>
        <item>Greataxe</item>
        <item>Greatsword</item>
        <item>Halberd</item>
        <item>Lance</item>
        <item>Longsword</item>
        <item>Maul</item>
        <item>Morningstar Pike</item>
        <item>Rapier</item>
        <item>Scimitar</item>
        <item>Shortsword</item>
        <item>Trident</item>
        <item>War Pick</item>
        <item>Warhammer</item>
        <item>Whip</item>
        <item>Blowgun</item>
        <item>Crossbow, hand</item>
        <item>Crossbow, heavy</item>
        <item>Longbow</item>
        <item>Net</item>
    </string-array>
    <string name="PhysAttr">Select Physical Attributes</string>
    <string name="hintStrength">Strength</string>
    <string name="hintDext">Dexterity</string>
    <string name="hintConst">Constitution</string>
    <string name="hintIntel">Intelligence</string>
    <string name="hintWisdom">Wisdom</string>
    <string name="hintCharisma">Charisma</string>
</resources>